[package]
name = "tx_processor"
version = "0.1.0"
edition = "2021"

[lints.clippy]
bool_comparison = "allow"

[dependencies]
serde = { version = "1.0.210", features = ["serde_derive"] }
strum = "0.26"
strum_macros = "0.26"
fastnum = "0.7.4"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread", "signal", "fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
futures = "0.3.31"